--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'English language -- Dictionaries'
 - !lcc 'PE'
+- GITenberg
 title: Webster's Unabridged Dictionary
 url: http://www.gutenberg.org/ebooks/29765
